--- a/crates/shoal-core/Cargo.toml
+++ b/crates/shoal-core/Cargo.toml
@@ -6,6 +6,10 @@ publish = false
 
 [dependencies]
 thiserror = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+arrow = { workspace = true }
+arrow-json = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
