Revamped core files for p2 of building v0.1: wrapping up an in-memory SQL-queryable ring buffer by end of p2

--- a/crates/shoal-core/Cargo.toml
+++ b/crates/shoal-core/Cargo.toml
@@ -10,6 +10,9 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 arrow = { workspace = true }
 arrow-json = { workspace = true }
+datafusion = { workspace = true }
+tokio = { workspace = true, features = ["sync", "macros", "rt"] }
+bytes = "1.11.0"
 
 [dev-dependencies]
 anyhow = { workspace = true }
