--- a/crates/shoal-core/Cargo.toml
+++ b/crates/shoal-core/Cargo.toml
@@ -10,9 +10,12 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 arrow = { workspace = true }
 arrow-json = { workspace = true }
+
+# Phase 2 dependencies
 datafusion = { workspace = true }
 tokio = { workspace = true, features = ["sync", "macros", "rt"] }
 bytes = "1.11.0"
+async-trait = "0.1"
 
 [dev-dependencies]
 anyhow = { workspace = true }
