Fixed 2 issues: (a) Incorrect memory computing in case of failed compaction (b) Incorrect error handling in case of rotation failer (from active head to sealed snapshots in tail)

--- a/crates/shoal-core/Cargo.toml
+++ b/crates/shoal-core/Cargo.toml
@@ -13,7 +13,7 @@ arrow-json = { workspace = true }
 
 # Phase 2 dependencies
 datafusion = { workspace = true }
-tokio = { workspace = true, features = ["sync", "macros", "rt"] }
+tokio = { workspace = true, features = ["sync", "macros", "rt","time"] }
 bytes = "1.11.0"
 async-trait = "0.1"
 
